# Rag_Task_10

./: .env.example  .gitignore  DEVELOPMENT_GUIDELINES.md  README.md  mock_legal_data.json  pyproject.toml
docs/: index.html
notebooks/: prompts.py  strategy_ingestion_detailed.ipynb
src/ragwork/: graphqlschema.py  main.py  parser.py  retriever.py
src/ragwork/output/: embeddings.pkl
src/ragwork/rag/: graphqlschema.py  retriever.py
